# src/routes/index.js
@@ -6,6 +6,7 @@ const favoriteRoutes = require("./favoriteRoutes");
 const housingRequestRoutes = require("./housingRequestRoutes");
 const jobRoutes = require("./jobRoutes");
 const metaRoutes = require("./metaRoutes");
+const marketListingRoutes = require("./marketListingRoutes");
 const notificationRoutes = require("./notificationRoutes");
 const propertyRoutes = require("./propertyRoutes");
 const reportRoutes = require("./reportRoutes");
@@ -20,6 +21,7 @@ const router = express.Router();
 router.use("/auth", authRoutes);
 router.use("/properties", propertyRoutes);
 router.use("/jobs", jobRoutes);
+router.use("/market-listings", marketListingRoutes);
 router.use("/favorites", favoriteRoutes);
 router.use("/housing-requests", housingRequestRoutes);
 router.use("/reports", reportRoutes);
